2021-09-08  Kimmo Kinnunen  <kkinnunen@apple.com>

        webgl/2.0.y/deqp/functional/gles3/rbostatequery.html fails on Metal
        https://bugs.webkit.org/show_bug.cgi?id=229950

        Reviewed by Dean Jackson.

        Enable webgl/2.0.y/deqp/functional/gles3/rbostatequery.html
        explicitly until 2.0.y is activated.

        * webgl/TestExpectations:

2021-09-07  Kimmo Kinnunen  <kkinnunen@apple.com>

        webgl/2.0.y/deqp/functional/gles3/negativestateapi.html get_query_parameter  fails on Metal
        https://bugs.webkit.org/show_bug.cgi?id=229982

        Reviewed by Dean Jackson.

        Enable webgl/2.0.y/deqp/functional/gles3/negativestateapi.html
        explicitly until 2.0.y is activated.

        * webgl/TestExpectations:

2021-09-07  Sihui Liu  <sihui_liu@apple.com>

        Add basic support for Storage API
        https://bugs.webkit.org/show_bug.cgi?id=229925

        Reviewed by Darin Adler.

        * platform/mac-wk1/fast/dom/navigator-detached-no-crash-expected.txt:
        * platform/mac-wk2/fast/dom/navigator-detached-no-crash-expected.txt:

2021-09-07  Antti Koivisto  <antti@apple.com>

        Disable inline culling
        https://bugs.webkit.org/show_bug.cgi?id=229993

        Reviewed by Alan Bujtas.

        * fast/flexbox/line-clamp-link-after-ellipsis.html:
        * platform/mac/fast/multicol/table-vertical-align-expected.txt:
        * platform/mac/fast/multicol/vertical-lr/float-multicol-expected.txt:
        * platform/mac/fast/multicol/vertical-rl/float-multicol-expected.txt:
        * platform/mac/tables/mozilla/bugs/bug1188-expected.txt:

2021-09-07  Fujii Hironori  <Hironori.Fujii@sony.com>

        [WinCairo] Support prefers-color-scheme media query
        https://bugs.webkit.org/show_bug.cgi?id=229976

        Reviewed by Don Olmstead.

        * platform/wincairo/TestExpectations:

2021-09-07  Arcady Goldmints-Orlov  <agoldmints@igalia.com>
