@@ -5066,3 +5066,4 @@ webkit.org/b/229726 imported/w3c/web-platform-tests/css/css-font-loading/fontfac
 webkit.org/b/229727 imported/w3c/web-platform-tests/css/css-font-loading/fontfaceset-load-var.html [ Skip ]
 
 webkit.org/b/229975 fast/text/FontFaceSet-status-after-style-update.html [ Failure Pass ]
+webkit.org/b/230008 imported/w3c/web-platform-tests/css/css-pseudo/backdrop-animate-002.html [ ImageOnlyFailure ]
